--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             <button id="visualizeBtn">Visualize</button>
         </div>
         <div id="output"></div>
+        <div id="exportSection" style="display:none;">
+            <button id="exportCsv">Export CSV</button>
+            <button id="exportJson">Export JSON</button>
+        </div>
     </div>
     <script src="app.js"></script>
 </body>
